add grid template areas

--- a/14 - Grid Template Areas/area-line-names-START.html
+++ b/14 - Grid Template Areas/area-line-names-START.html
@@ -46,6 +46,16 @@
     .container {
       display: grid;
       grid-gap: 20px;
+      grid-template-areas: 
+        "pop pop pop pop pizza pizza pizza pizza"
+        "pop pop pop pop pizza pizza pizza pizza"
+        "pop pop pop pop pizza pizza pizza pizza"
+        "pop pop pop pop pizza pizza pizza pizza";
+    }
+
+    .item3 {
+      grid-column: pop-start / pizza-end;
+      grid-row-end: pop-end
     }
   </style>
 </body>
