add photo fgallery

--- a/21 - Flexbox vs CSS Grid/stacked-layout-START.html
+++ b/21 - Flexbox vs CSS Grid/stacked-layout-START.html
@@ -19,7 +19,11 @@
   </div>
 
   <style>
-    .stacked {}
+    .stacked {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+    }
 
     .stacked>* {
       width: 30%;
