--- a/21 - Flexbox vs CSS Grid/controls-on-right-START.html
+++ b/21 - Flexbox vs CSS Grid/controls-on-right-START.html
@@ -55,6 +55,10 @@
       background: white;
       padding: 10px;
       border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-gap: 10px;
+      grid-auto-flow: column;
     }
   </style>
 </body>
