--- a/23 - Bootstrappy Grid with CSS Variables/grid-START.html
+++ b/23 - Bootstrappy Grid with CSS Variables/grid-START.html
@@ -13,13 +13,21 @@
 
   <div class="grid">
     <div class="item">1</div>
-    <div class="item">2</div>
+    <div class="item">Raven x BB</div>
     <div class="item">3</div>
     <div class="item">4</div>
   </div>
 
   <style>
-    .grid {}
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(12, minmax(0, 1fr));
+      grid-gap: 20px;
+    }
+
+    .item { 
+      width: 100%;
+    }
   </style>
 
 </body>
